--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.20.1-1.0.0'
+version = '1.20.1-1.1.0'
 group = 'com.github.ptran779.aegisops'
 archivesBaseName = 'aegisops'
 
@@ -115,21 +115,21 @@ dependencies {
     // For more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
-//    implementation fg.deobf("curse.maven:jei-238222:6600311")
+    implementation fg.deobf("curse.maven:jei-238222:6600311")
     implementation fg.deobf("curse.maven:timeless-and-classics-zero-1028108:6654541")
     implementation fg.deobf("curse.maven:epic-fight-mod-405076:6632324")
-    implementation fg.deobf("curse.maven:epic-tactical-epic-fight-compat-1277045:6599734")
+//    implementation fg.deobf("curse.maven:epic-tactical-epic-fight-compat-1277045:6599734")
     implementation fg.deobf("curse.maven:jade-324717:6271651")
-
+    implementation 'org.spongepowered:mixin:0.8.5'
+    implementation fg.deobf("curse.maven:cloth-config-348521:5729105")
     implementation fg.deobf("curse.maven:observable-509575:5643037")
     implementation fg.deobf("curse.maven:architectury-api-419699:5137938")
     implementation fg.deobf("curse.maven:kotlin-for-forge-351264:5402061")
-//    implementation fg.deobf("curse.maven:epic-knights-armor-and-weapons-509041:4423962")
-//    implementation fg.deobf("curse.maven:architectury-api-419699:4521273")
-//    implementation fg.deobf("curse.maven:cloth-config-348521:3972423")
-//    implementation fg.deobf("curse.maven:monster-hunter-villager-936647:5562191")
-//    implementation fg.deobf("curse.maven:forbidden-arcanus-309858:5198323")
-//    implementation fg.deobf("curse.maven:valhelsia-core-416935:5189548")
+//
+//    implementation fg.deobf("curse.maven:better-mob-combat-1058798:6125563")
+//    implementation fg.deobf("curse.maven:better-combat-by-daedelus-639842:5625757")
+//    implementation fg.deobf("curse.maven:mob-player-animator-1058791:6125584")
+//    implementation fg.deobf("curse.maven:playeranimator-658587:4587214")
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
