--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.20.1-1.4.0'
+version = '1.20.1-1.5.0alpha'
 group = 'com.github.ptran779.aegisops'
 archivesBaseName = 'aegisops'
 
