--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.20.1-1.5.2'
+version = '1.20.1-1.6.0Beta'
 group = 'com.github.ptran779.aegisops'
 archivesBaseName = 'aegisops'
 
@@ -31,6 +31,7 @@ minecraft {
     runs {
         client {
             workingDirectory project.file('run')
+            jvmArg "-Xmx4G"
 
             property 'forge.logging.markers', 'REGISTRIES'
 
@@ -53,10 +54,14 @@ minecraft {
 
         server {
             workingDirectory project.file('run')
+            jvmArg "-Xmx4G"
 
             property 'forge.logging.markers', 'REGISTRIES'
 
             property 'forge.logging.console.level', 'debug'
+
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
 
             mods {
                 companions {
@@ -117,7 +122,7 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
     implementation fg.deobf("curse.maven:jei-238222:6600311")
     implementation fg.deobf("curse.maven:timeless-and-classics-zero-1028108:6654541")
-    implementation fg.deobf("curse.maven:epic-fight-mod-405076:6632324")
+//    implementation fg.deobf("curse.maven:epic-fight-mod-405076:6632324")
 //    implementation fg.deobf("curse.maven:epic-tactical-epic-fight-compat-1277045:6599734")
     implementation fg.deobf("curse.maven:jade-324717:6271651")
     implementation 'org.spongepowered:mixin:0.8.5'
