ML infastructure fix a few bug here and there (couple layer has bug) complete chip screen UI and entire func linking complete thread setup: 1 inf, 1 train finish lib integration, now Chip Item contain both model and data
and a shit ton of thing that I forget...

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ minecraft {
     runs {
         client {
             workingDirectory project.file('run')
+            jvmArgs '-Xmx4G'
 
             property 'forge.logging.markers', 'REGISTRIES'
 
